# mc-control

./: Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
